<resources>
    <string name="app_name">MasaKuy</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_resep">Semua Resep</string>
    <string name="menu_makanan">Makanan</string>
    <string name="menu_minuman">Minuman</string>
    <string name="menu_dessert">Dessert</string>
    <string name="dialog_deskripsi">MasaKuy adalah aplikasi yang berisi tentang resep-resep makanan sekaligus cara membuat dan video cara masaknya.
        Aplikasi ini masih baru memiliki versi 1.0</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Donec nec varius leo. Curabitur libero erat, tincidunt commodo varius non, mattis eu justo.
        Mauris mattis varius pretium. Suspendisse vitae magna arcu. Cras rhoncus in nibh vulputate pharetra.
        Sed feugiat sapien finibus aliquam hendrerit. Proin ac enim risus. Nam in cursus dui.
        Donec tristique at leo et mollis. In dapibus felis quis mi finibus, vel varius purus scelerisque.
        Nunc pellentesque quam ac aliquam aliquet. Nullam maximus mi eu posuere fermentum. Nam ut mi magna.
        Phasellus sed mi dui. Proin nec tortor id nulla imperdiet consectetur ut ac nisl.
        Nulla sed eros vitae mauris tincidunt aliquet eu in sapien. Quisque euismod lorem vel convallis laoreet.</string>
    <string name="nav_about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_about">About</string>
</resources>
