<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_resep"
            android:icon="@drawable/ic_menu_resep"
            android:title="@string/menu_resep" />
        <item
            android:id="@+id/nav_makanan"
            android:icon="@drawable/ic_menu_food"
            android:title="@string/menu_makanan" />
        <item
            android:id="@+id/nav_minuman"
            android:icon="@drawable/ic_menu_drink"
            android:title="@string/menu_minuman" />
        <item
            android:id="@+id/nav_dessert"
            android:icon="@drawable/ic_menu_dessert"
            android:title="@string/menu_dessert" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />
    </group>

</menu>
