<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.muhammadfarhaan.apps.masakuy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_resep"
        android:name="com.muhammadfarhaan.apps.masakuy.ui.resep.ResepFragment"
        android:label="@string/menu_resep"
        tools:layout="@layout/fragment_resep" />

    <fragment
        android:id="@+id/nav_makanan"
        android:name="com.muhammadfarhaan.apps.masakuy.ui.makanan.MakananFragment"
        android:label="@string/menu_makanan"
        tools:layout="@layout/makanan_fragment" />

    <fragment
        android:id="@+id/nav_minuman"
        android:name="com.muhammadfarhaan.apps.masakuy.ui.minuman.MinumanFragment"
        android:label="@string/menu_minuman"
        tools:layout="@layout/minuman_fragment" />

    <fragment
        android:id="@+id/nav_dessert"
        android:name="com.muhammadfarhaan.apps.masakuy.ui.dessert.DessertFragment"
        android:label="@string/menu_dessert"
        tools:layout="@layout/dessert_fragment" />

</navigation>